istio/ads_v2/advertisements_v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: advertisements
    app: ecommerce
    version: v2
  name: advertisements2
  namespace: ns3
spec:
  replicas: 1
  selector:
    matchLabels:
      service: advertisements
      app: ecommerce
      version: v2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: advertisements
        app: ecommerce
        version: v2
    spec:
      containers:
      - image: arapulido/ads-service:2.0 
        name: advertisements
        command: ["ddtrace-run"]
        args: ["flask", "run", "--port=5002", "--host=0.0.0.0"]
        ports:
        - containerPort: 5002
        resources: {}
