istio/ads_v2/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ads
  namespace: ns3
spec:
  host: advertisements 
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
