istio/ads_v2/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ads-vs 
  namespace: ns3
spec:
  hosts:
    - advertisements 
  http:
  - match:
    - headers:
        page-source:
          exact: "products"
    route:
    - destination:
        host: advertisements 
        subset: v2
  - route:
    - destination:
        host: advertisements 
        subset: v1
